--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@ el que haga menos de 10 tickets le degradamos su rango
 <br>
 <br>
 <br>
+Las sospechas sobre que zead era falso se han caido ahora el 
+<br>
+el jugador roymar confirma que zead es real y lo conoce despues
+<br>
+de que walfi saliera a defenderlo
+<br>
+<br>
+<br>
 <br>
 Hasta aqui mi reporte Joaquin</p>
 <br>
