--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ inicia el segundo megacerdo de noqueo
 <br>
 Venga vamos por ese cerdo
 <br>
+<ing src ="https://twitter.com/clb_es/status/1722249734403080408/photo/1=jpg" height="700"  widht="100">
 <br>
 <br>
 Pachivales es de mi honor avisarles que el dia de mañana
@@ -47,6 +48,7 @@ el jugador roymar confirma que zead es real y lo conoce despues
 <br>
 de que walfi saliera a defenderlo
 <br>
+<ing src ="https://br.pinterest.com/pin/2885187255362729/=jpg" height="100"  widht="50">
 <br>
 <br>
 <br>
