--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@ inicia el segundo megacerdo de noqueo
 <br>
 Venga vamos por ese cerdo
 <br>
-<ing src ="https://twitter.com/clb_es/status/1722249734403080408/photo/1=jpg" height="700"  widht="100">
+<body>
+  
+  <ing src ="https://twitter.com/clb_es/status/1722249734403080408/photo/1=jpg" height="700"  widht="100">
+
+</body>
 <br>
 <br>
 Pachivales es de mi honor avisarles que el dia de mañana
